# IncSatGC-release

./: CMakeLists.txt  CadicalAssignmentPropagator.cpp  CadicalAssignmentPropagator.h  CadicalZykovPropagator.cpp  CadicalZykovPropagator.h  ExtendSolvers.cpp  ExtendSolvers.h  Graph.cpp  Graph.h  GraphMatrix.cpp  GraphMatrix.h  IncSatGC.cpp  IncSatGC.h  Options.cpp  Options.h  README.md  Statistics.cpp  Statistics.h  main.cpp
cmake/: FindCADICAL.cmake  FindCRYPTOMINISAT.cmake  FindOPENWBO.cmake
